fix: abstract link + chip alignment

--- a/src/components/Careers/Intro/styles.module.css
+++ b/src/components/Careers/Intro/styles.module.css
@@ -2,6 +2,13 @@
   background: url('/images/careers-bg.svg') no-repeat center -90px;
 }
 
+.chip {
+  color: var(--mui-palette-primary-main);
+  /* TODO: Use custom chip from wallet page once merged
+  Uppercase transformation does not vertically align correctly */
+  padding-top: 2px;
+}
+
 .container {
   flex-direction: column;
   align-items: center;
